--- a/ryan-tso-portfolio/package.json
+++ b/ryan-tso-portfolio/package.json
@@ -20,9 +20,11 @@
     "react": "18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-parallax": "^3.5.1",
     "react-redux": "^8.1.0",
     "react-scroll-into-view": "^1.12.1",
-    "react-scroll-parallax": "^3.4.2"
+    "react-scroll-parallax": "^3.4.2",
+    "react-use-draggable-scroll": "^0.4.7"
   },
   "devDependencies": {
     "eslint": "8.42.0",
