--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "animate.css": "^4.1.1",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.1.0",
