--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.0",
     "react-scroll-into-view": "^1.12.1",
-    "react-use-draggable-scroll": "^0.4.7"
+    "react-use-draggable-scroll": "^0.4.7",
+    "scroll-sync-react": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "8.42.0",
